--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 
+  <!-- CONTENT -->
+  <div class="content"></div>
+
+  
   <!-- SCRIPTS JS -->
   <script src="./script.js"></script>
   <script>
